# edge-rest-api

./: Cargo.toml  README.md  database.sql
src/: db_access.rs  errors.rs  handlers.rs  main.rs  models.rs  routes.rs  state.rs
src/dbaccess/: devices.rs
src/dbscripts/: database.sql
src/handlers/: devices.rs  general.rs  mod.rs
src/models/: configuration.rs  devices.rs  mod.rs
