[package]
name = "api"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
log = "0.4"
env_logger = "0.9.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
chrono = {version = "0.4", features = ["serde"]}
sqlx = {version = "0.5", default_features = false, features = ["postgres", "runtime-actix-rustls", "macros", "chrono", "uuid"]}